# eval-sanity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
eval_sanity/: __init__.py  diagnose.py  metrics.py  regression.py  sample.py  trajectory.py
examples/: demo.py  real_world_jqara.py  regression_demo.py  trajectory_demo.py
tests/: test_diagnose.py  test_metrics.py  test_regression.py  test_trajectory.py
