[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-sanity"
version = "0.1.0"
description = "Audit whether your RAG retrieval metrics can be trusted on a given dataset."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Elvis Yao", email = "elvisyao@proton.me" }]
keywords = ["rag", "evaluation", "retrieval", "metrics", "recall", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Zero runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/elvisyao/eval-sanity"
Motivation = "https://example.com/[BLOG-03-URL]"

[tool.setuptools.packages.find]
include = ["eval_sanity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
